hphp/test/zend/good/Zend/tests/traits/error_013.php.expectf

Fatal error: Only 'final' and visibility modifiers are allowed in trait alias rule in %s/error_013.php on line 8
